--- a/SimplyE/Sources/SimplyE/settings/about.page
+++ b/SimplyE/Sources/SimplyE/settings/about.page
@@ -4,15 +4,62 @@
     <minArea width="414" height="736"/>
     <location/>
     <backgroundColor Red="248" Green="248" Blue="248"/>
-    <children xsi:type="native:WebView" name="webView">
+    <children xsi:type="widgets:NavigationBar" name="navigationBar">
+      <children xsi:type="widgets:Button" text="Done" paddingLeft="20" name="doneButton" horizontalAlignment="CENTER">
+        <font fontFamily="ArialMT" size="15">
+          <color Red="68" Green="106" Blue="179"/>
+        </font>
+        <layoutData xsi:type="layout:AutoLayoutData">
+          <constraints source="/0/@children.0/@children.0" target="/0/@children.0"/>
+          <constraints sourceAnchor="CENTER_Y" targetAnchor="CENTER_Y" source="/0/@children.0/@children.0" target="/0/@children.0"/>
+        </layoutData>
+        <location y="14"/>
+        <size width="56" height="18"/>
+        <contentSize width="36" height="18"/>
+      </children>
+      <children xsi:type="widgets:Button" horizontalAlignment="CENTER" paddingRight="10" name="reloadButton">
+        <font fontFamily="ArialMT" size="17">
+          <color Red="68" Green="106" Blue="179"/>
+        </font>
+        <layoutData xsi:type="layout:AutoLayoutData">
+          <constraints sourceAnchor="RIGHT" targetAnchor="RIGHT" source="/0/@children.0/@children.1" target="/0/@children.0"/>
+          <constraints sourceAnchor="HEIGHT" constant="15" source="/0/@children.0/@children.1"/>
+          <constraints sourceAnchor="CENTER_Y" targetAnchor="CENTER_Y" source="/0/@children.0/@children.1" target="/0/@children.0"/>
+        </layoutData>
+        <location x="356" y="16"/>
+        <size width="58" height="15"/>
+        <contentSize width="48" height="19"/>
+      </children>
+      <children xsi:type="widgets:Label" text="label" paddingLeft="10" name="titleLabel" paddingRight="10">
+        <font fontFamily="ArialMT" size="15">
+          <color Red="70" Green="70" Blue="70"/>
+        </font>
+        <layoutData xsi:type="layout:AutoLayoutData">
+          <constraints sourceAnchor="CENTER_X" targetAnchor="CENTER_X" source="/0/@children.0/@children.2" target="/0/@children.0"/>
+          <constraints sourceAnchor="CENTER_Y" targetAnchor="CENTER_Y" source="/0/@children.0/@children.2" target="/0/@children.0"/>
+        </layoutData>
+        <location x="181" y="14"/>
+        <size width="52" height="18"/>
+        <contentSize width="32" height="18"/>
+      </children>
+      <layout xsi:type="layout:AutoLayout"/>
+      <maxArea width="-1" height="-1"/>
       <location/>
-      <size width="414" height="736"/>
-      <layoutData xsi:type="layout:GridData" verticalAlignment="MIDDLE" heightConstraint="MATCH_PARENT" grabHorizontalSpace="true" widthConstraint="MATCH_PARENT" grabVerticalSpace="true">
+      <minArea height="46"/>
+      <size width="414" height="46"/>
+      <layoutData xsi:type="layout:GridData" verticalAlignment="MIDDLE" heightConstraint="MATCH_PARENT" grabHorizontalSpace="true">
+        <maxSize width="-1" height="-1"/>
+      </layoutData>
+    </children>
+    <children xsi:type="native:WebView" name="webView">
+      <location y="46"/>
+      <size width="414" height="690"/>
+      <layoutData xsi:type="layout:GridData" row="1" verticalAlignment="MIDDLE" heightConstraint="MATCH_PARENT" grabHorizontalSpace="true" grabVerticalSpace="true" widthConstraint="MATCH_PARENT">
         <minSize width="100" height="100"/>
         <maxSize width="-1" height="-1"/>
       </layoutData>
     </children>
-    <layout xsi:type="layout:GridLayout"/>
+    <layout xsi:type="layout:GridLayout" rows="2"/>
     <maxArea width="414" height="736"/>
     <size width="414" height="736"/>
   </widgets:Page>
